--- a/Linked List/Linked List.vcxproj.filters
+++ b/Linked List/Linked List.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="UnorderedList.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Iterator.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
