--- a/Linked List/Linked List.vcxproj
+++ b/Linked List/Linked List.vcxproj
@@ -154,6 +154,7 @@
     <ClCompile Include="Linked List.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Iterator.h" />
     <ClInclude Include="List.h" />
     <ClInclude Include="Node.h" />
     <ClInclude Include="UnorderedList.h" />
